--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,13 @@
 <li>
-  Name: <%= user.name %>
+  <%= user.name %>
+  
   <span class="profile-link">
     <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+  </span>
+   ||
+  <span class="profile-link">
+  <% if !current_user.friend?(user) && !current_user.invite_sent?(user)%> 
+  <%= link_to 'Invite to friendship',  friendhips_path(id: user.id), class: 'profile-link' %>
+  <% end %>
   </span>
 </li>
