--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <section class="user-section">
-  <h2><%= "Name: #{@user.name}" %></h2>
+  <h2><%= "#{@user.name}" %></h2>
+  
+  <h3> Pending invitations </h3>
+  <%= render @friend_requests %>
+
   <article class="timeline">
     <h3>Recent posts:</h3>
     <ul class="posts">
