--- a/app/views/friendhips/_friendship.html.erb
+++ b/app/views/friendhips/_friendship.html.erb
@@ -1,4 +1,10 @@
 <li>
-    <button> <%= link_to 'Accept'> </button>
-    <button> <%= link_to 'Decline'> </button>
+  <%= user.name %>
+  
+  <span class="profile-link">
+    <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+  </span>
+   ||
+   <%= link_to 'Accept' %> 
+   <%= link_to 'Decline' %>
 </li>
