--- a/app/views/friendhips/index.html.erb
+++ b/app/views/friendhips/index.html.erb
@@ -1,13 +1,4 @@
-<h2>Pending Invitations</h2>
-
-<section class="users-section">
-  <ul class="users-list">
-    <% if @friendhips.length > 0 %>
-      <% @friendhips.each do |friendhip| %>
-        <%= render partial: "friendship", locals: { friendhip: friendhip } %>
-      <% end %>
-    <% else %>
-      <li><p>No post available</p></li>
-    <% end %>
-  </ul>
-</section>
+<h3> Pending Invitations </h3>
+<ul>
+  <%= render @friend_requests %>
+</ul>
